Fix(#22) Don't allow the user to delete a new contact.

--- a/src/pages/building-contact-detail/building-contact-detail.html
+++ b/src/pages/building-contact-detail/building-contact-detail.html
@@ -86,7 +86,7 @@
 
 <ion-footer>
 
-  <ion-navbar>
+  <ion-navbar *ngIf="!isNew">
     <ion-buttons left>
       <button ion-button  icon-start (click)="onDeleteContact()">
         <ion-icon name="trash"></ion-icon>
