Fix(#16) Fix the navigation to the building's root page.

--- a/src/pages/building-main/building-main.html
+++ b/src/pages/building-main/building-main.html
@@ -50,4 +50,4 @@
   </ion-content>
 </ion-menu>
 
-<ion-nav #buildingContent [root]="rootPage"></ion-nav>
+<ion-nav #buildingContent [root]="rootPage" [rootParams]="getParams()"></ion-nav>
