--- a/src/pages/building-pnaps/building-pnaps.html
+++ b/src/pages/building-pnaps/building-pnaps.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the BuildingPnapsPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
@@ -14,6 +9,27 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+  <ion-list>
+    <ion-list-header>
+      PNAPS du bâtiment
+    </ion-list-header>
+    <button ion-item icon-start *ngFor="let pnap of pnaps | orderBy:'typeDescription'" (click)="onItemClick(pnap.id)">
+      <ion-icon name="contact" item-start></ion-icon>
+      <h2>{{pnap.typeDescription}}</h2>
+      <p>{{pnap.name}}</p>
+    </button>
+  </ion-list>
 </ion-content>
+
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons>
+      <button ion-button icon-start full type="button" (click)="onItemClick(null)">
+        <ion-icon name="add-circle"></ion-icon>
+        Ajouter un PNAP...
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
