--- a/src/pages/intervention-home/intervention-home.html
+++ b/src/pages/intervention-home/intervention-home.html
@@ -23,6 +23,9 @@
       <button ion-item menuClose (click)="openPage(waterSuppliesPage)">
         Alimentation en eau
       </button>
+      <button ion-item menuClose (click)="goToInspectionQuestions()">
+        Questionnaire
+      </button>
       <button ion-item (click)="closeMenu()">
         <ion-icon name="close"></ion-icon>
         Fermer
