Fix(#19) The delete icon was incorrectly set as being icon-end instead of icon-start.

--- a/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
+++ b/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
@@ -119,7 +119,7 @@
 <ion-footer>
   <ion-navbar *ngIf="!isNew">
     <ion-buttons left>
-      <button ion-button icon-end (click)="onDeleteHazardousMaterial()">
+      <button ion-button icon-start (click)="onDeleteHazardousMaterial()">
         <ion-icon name="trash"></ion-icon>
         Supprimer cette matière
       </button>
