Feat(#19) Sort the hazardous material's list by name.

--- a/src/pages/hazardous-material-selection/hazardous-material-selection.html
+++ b/src/pages/hazardous-material-selection/hazardous-material-selection.html
@@ -15,7 +15,7 @@
 
 <ion-content>
   <ion-list>
-    <button ion-item *ngFor="let mat of hazardousMaterials" (click)="onSelectMaterial(mat.id)">
+    <button ion-item *ngFor="let mat of hazardousMaterials | orderBy: 'name'" (click)="onSelectMaterial(mat.id)">
       <h2>{{mat.name}}</h2>
       <p>{{mat.number}}</p>
     </button>
