--- a/src/pages/building-main/building-main.html
+++ b/src/pages/building-main/building-main.html
@@ -22,13 +22,9 @@
         <ion-icon name="nuclear" small></ion-icon>
         Matières dangereuses
       </button>
-      <button ion-item icon-left menuClose (click)="openPage(alarmPanelsPage)">
-        <ion-icon name="notifications" small></ion-icon>
-        Panneaux d'alarme
-      </button>
-      <button ion-item icon-left menuClose (click)="openPage(waterSprinklersPage)">
-        <ion-icon name="water" small></ion-icon>
-        Gicleurs
+      <button ion-item icon-left menuClose (click)="openPage(fireProtectionPage)">
+        <ion-icon name="flame" small></ion-icon>
+        Protection incendie
       </button>
       <button ion-item icon-left menuClose (click)="openPage(particularRisksPage)">
         <ion-icon name="flash" small></ion-icon>
