--- a/src/pages/building-fire-protection/building-fire-protection.html
+++ b/src/pages/building-fire-protection/building-fire-protection.html
@@ -27,10 +27,7 @@
 
 </ion-header>
 
-
-
-
-<ion-content padding>
+<ion-content>
   <ion-list>
     <ion-item-group *ngIf="currentSegment=='panel'">
       <button ion-item icon-start *ngFor="let panel of panels" (click)="onPanelClick(panel.id)">
@@ -48,8 +45,6 @@
     </ion-item-group>
   </ion-list>
 </ion-content>
-
-
 
 <ion-footer>
   <ion-toolbar>
