--- a/src/pages/building-anomalies/building-anomalies.html
+++ b/src/pages/building-anomalies/building-anomalies.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the BuildingAnomaliesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
@@ -14,6 +8,31 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+  <ion-list>
+    <ion-item-group *ngFor="let theme of themes">
 
+      <ion-list-header color="light">
+        {{theme.theme}}
+        <button ion-button item-end (click)="onAddAnomalyForTheme(theme.theme)">Ajouter</button>
+      </ion-list-header>
+
+      <button ion-item *ngFor="let anomaly of theme.anomalies" (click)="onItemClick(anomaly.id)">
+        {{anomaly.notes}}
+      </button>
+
+    </ion-item-group>
+  </ion-list>
 </ion-content>
+
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons>
+      <button ion-button icon-start full type="button" (click)="onAddNewAnomaly()">
+        <ion-icon name="add-circle"></ion-icon>
+        Ajouter une anomalie...
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
