--- a/src/pages/building-anomaly-detail/building-anomaly-detail.html
+++ b/src/pages/building-anomaly-detail/building-anomaly-detail.html
@@ -1,18 +1,46 @@
-<!--
-  Generated template for the BuildingAnomalyDetailPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>building-anomaly-detail</ion-title>
+    <ion-buttons left>
+      <button ion-button  icon-only (click)="onCancelEdition()">
+        <ion-icon name="arrow-back"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>Édition de l'anomalie</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
 
+<ion-content>
+  <ion-list [formGroup]="form">
+
+    <button ion-item (click)="onSelectAnomaly()">
+      <ion-label item-start fixed>Thème</ion-label>
+      <ion-label item-content>{{anomaly?.theme}}</ion-label>
+    </button>
+
+    <ion-item-group>
+      <ion-item-divider>Notes</ion-item-divider>
+      <ion-item>
+        <ion-textarea maxlength="500" formControlName="notes"></ion-textarea>
+      </ion-item>
+    </ion-item-group>
+
+  </ion-list>
 </ion-content>
+
+
+<ion-footer>
+
+  <ion-navbar *ngIf="!isNew">
+    <ion-buttons left>
+      <button ion-button  icon-start (click)="onDeleteAnomaly()">
+        <ion-icon name="trash"></ion-icon>
+        Supprimer cette anomalie
+      </button>
+    </ion-buttons>
+  </ion-navbar>
+
+</ion-footer>
