Fix(#42) Add menu items to back to inspections' list and inspection (from building).

--- a/src/pages/building-main/building-main.html
+++ b/src/pages/building-main/building-main.html
@@ -34,13 +34,9 @@
         <ion-icon name="warning" small></ion-icon>
         Anomalies
       </button>
-      <button ion-item icon-left (click)="closeMenu()">
-        <ion-icon name="undo" small></ion-icon>
-        Retourner à l'inspection
-      </button>
-      <button ion-item icon-left (click)="closeMenu()">
+      <button ion-item icon-left (click)="goBackToInspection()">
         <ion-icon name="close-circle" small></ion-icon>
-        Fermer le menu
+        Retourner à l'inspection
       </button>
     </ion-list>
   </ion-content>
