--- a/src/pages/intervention-home/intervention-home.html
+++ b/src/pages/intervention-home/intervention-home.html
@@ -9,26 +9,27 @@
       <button ion-item menuClose (click)="openPage(generalPage)">
         Infos générales
       </button>
-      <button ion-item menuClose (click)="openPage(buildingsPage)">
+      <button ion-item icon-start menuClose (click)="openPage(buildingsPage)">
         <ion-icon name="home"></ion-icon>
         Bâtiments
       </button>
-      <button ion-item menuClose (click)="openPage(implantationPlanPage)">
+      <button ion-item icon-start menuClose (click)="openPage(implantationPlanPage)">
         <ion-icon name="map"></ion-icon>
         Plan d'implantation
       </button>
       <button ion-item menuClose (click)="openPage(coursePage)">
         Parcours
       </button>
-      <button ion-item menuClose (click)="openPage(waterSuppliesPage)">
+      <button ion-item icon-start menuClose (click)="openPage(waterSuppliesPage)">
         Alimentation en eau
       </button>
-      <button ion-item menuClose (click)="goToInspectionQuestions()">
+      <button ion-item icon-start menuClose (click)="goToInspectionQuestions()">
+        <ion-icon name="list-box"></ion-icon>
         Questionnaire
       </button>
-      <button ion-item (click)="closeMenu()">
-        <ion-icon name="close"></ion-icon>
-        Fermer
+      <button ion-item (click)="goBackToInspectionList()">
+        <ion-icon name="close-circle"></ion-icon>
+        Sortir de l'inspection
       </button>
     </ion-list>
   </ion-content>
