Refactor(#18) Rename building-anomaly-detail-picture to building-child-picture.

--- a/src/pages/building-anomaly-detail/building-anomaly-detail.html
+++ b/src/pages/building-anomaly-detail/building-anomaly-detail.html
@@ -30,9 +30,9 @@
 
   </ion-list>
 
-  <building-anomaly-detail-pictures formControlName="id">
+  <building-child-pictures [repo]="picRepo" formControlName="id">
     Loading...
-  </building-anomaly-detail-pictures>
+  </building-child-pictures>
 
 </ion-content>
 
