--- a/src/pages/building-particular-risks/building-particular-risks.html
+++ b/src/pages/building-particular-risks/building-particular-risks.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the BuildingParticularRisksPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
@@ -14,6 +8,15 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+  {{currentSegment}}
 </ion-content>
+
+<ion-footer>
+  <ion-segment [(ngModel)]="currentSegment">
+    <ion-segment-button value="foundation">Fondation</ion-segment-button>
+    <ion-segment-button value="floor">Plancher</ion-segment-button>
+    <ion-segment-button value="wall">Murs</ion-segment-button>
+    <ion-segment-button value="roof">Toit</ion-segment-button>
+  </ion-segment>
+</ion-footer>
