feat(#45) : Add new class to group survey summary

--- a/src/pages/inspection-question-summary/inspection-question-summary.html
+++ b/src/pages/inspection-question-summary/inspection-question-summary.html
@@ -8,8 +8,26 @@
 <ion-content padding>
   <ion-list *ngFor="let answer of inspectionQuestionSummary">
       <ion-item>
-        <h2>{{answer.questionDescription}}</h2>
+        <h2>{{answer.Title}}</h2>
       </ion-item>
     <p>{{answer.answer}}</p>
   </ion-list>
+    <div id="SurveySummary">
+        <ion-card>
+            <ion-card-title>Title</ion-card-title>
+            <ion-card-content>
+                <div class="report-line">
+                    <ion-toggle class="report-line-control" [checked]="true">Oui</ion-toggle><ion-label class="report-line-text">Fonctionnel :</ion-label>
+                </div>
+                <div class="report-line">
+                    <ion-label class="report-line-text">Emplacement approprié :</ion-label><ion-label class="report-line-control">Oui</ion-label>
+                </div>
+            </ion-card-content>
+        </ion-card>
+        <ion-item-group>
+            <ion-item-divider color="light">A</ion-item-divider>
+            <ion-item>Angola</ion-item>
+            <ion-item>Argentina</ion-item>
+        </ion-item-group>
+    </div>
 </ion-content>
