Fix(#18) Fix placeholder variable name, move ngIf from ion-input to ion-item for the dimension.

--- a/src/pages/building-particular-risks/building-particular-risks.html
+++ b/src/pages/building-particular-risks/building-particular-risks.html
@@ -11,7 +11,7 @@
 
   <ion-list-header>Risques particuliers</ion-list-header>
 
-  <ion-segment [(ngModel)]="currentSegment">
+  <ion-segment [(ngModel)]="currentSegment" class="segmentRisk">
     <ion-segment-button value="foundation">Fondation</ion-segment-button>
     <ion-segment-button value="floor">Plancher</ion-segment-button>
     <ion-segment-button value="wall">Murs</ion-segment-button>
